# ECNUClaw

./: ECNUClaw改造计划_V1_2026-05-04.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/: custom_agent.py  quick_start.py
src/ecnuclaw/adapters/: __init__.py  anthropic_compat.py  deepseek.py  doubao.py  glm.py  innoSpark.py  kimi.py  qwen.py
src/ecnuclaw/core/: __init__.py  agent.py  cli.py  memory.py  skills.py
src/ecnuclaw/education/: __init__.py  assessment.py  heads.py
src/ecnuclaw/education/subjects/: __init__.py  chinese.py  math.py  science.py
src/ecnuclaw/tools/: __init__.py  registry.py
src/ecnuclaw/tools/builtin/: __init__.py  calculator.py  dictionary.py  knowledge.py  timer.py
src/lebotclaw/: __init__.py
src/lebotclaw/core/: agent.py  memory.py
src/lebotclaw/education/: assessment.py
tests/: test_agent.py  test_router.py  test_tools.py
